--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 	<title>Hello!</title>
 </head>
 <body>
-	<h1> Hello!!</h1>
+	<h1 style="color:blue;"> Hello!!</h1>
 	<h2> Another Header</h2>
 	<h3> git save</h3>
 	Hello, world!
